--- a/linkedin-clone-be/.env
+++ b/linkedin-clone-be/.env
@@ -5,3 +5,6 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DATABASE=linkedin
+
+JWT_SECRET=jwtsecret123
+EXPIRES_IN=3600s
