--- a/linkedin-clone-fe/package.json
+++ b/linkedin-clone-fe/package.json
@@ -25,9 +25,11 @@
     "@capacitor/core": "5.0.3",
     "@capacitor/haptics": "5.0.2",
     "@capacitor/keyboard": "5.0.2",
+    "@capacitor/preferences": "^5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
