--- a/linkedin-clone-fe/package.json
+++ b/linkedin-clone-fe/package.json
@@ -28,6 +28,7 @@
     "@capacitor/preferences": "^5.0.2",
     "@capacitor/status-bar": "5.0.2",
     "@ionic/angular": "^7.0.0",
+    "file-type": "^18.4.0",
     "ionicons": "^7.0.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
